tests/gabc-dump/should-fail/bad-hepisema-adjustment.gabc
name: bad horizontal episema adjustment;
%%
(c4) (;[oh:h]) (::)
